# GraphicsProjects

./: README.md
Disc Collider/: Main.cpp  Usage Notes.txt
Disc Collider/make/MSVS 2010/: Disc Collider.vcxproj  Disc Collider.vcxproj.filters  DisplayListHelper.cpp  DisplyaListHelper.h  Grid.cpp  Grid.h  SpaceBarHelper.h
Lighting & Materials/: Main.cpp  README.txt  SphereHelper.cpp  SphereHelper.h  Usage Notes.txt
Lighting & Materials/make/MSVS 10/: Cube Skeleton I.vcxproj  Cube Skeleton I.vcxproj.filters
Lighting & Materials/make/MSVS 10/props/OpenGLTrainer/: OpenGLTrainer - Debug.props  OpenGLTrainer.props
Lighting & Materials/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
Modern OpenGL/Draw_Appln/: draw.vert  glDefs.h  glDraw.cpp  glWidget.cpp  glWidget.h  glutDefs.h  mainWindow.cpp  mainWindow.h  primitives.h  textfile.cpp
OSG Human Model/: Implementation Details.txt
OSG Human Model/Code/: BodyHelper.cpp  BodyHelper.h  Feet.cpp  Feet.h  Head.cpp  Head.h  LeftHand.cpp  LeftHand.h  LeftHandBelowElbow.cpp  LeftHandBelowElbow.h  LeftLeg.cpp  LeftLeg.h  LeftLegBelowKnee.cpp  LeftLegBelowKnee.h  Main.cpp  MyBodyPart.h  RightHand.cpp  RightHand.h  RightHandBelowElbow.cpp  RightHandBelowElbow.h  RightLeg.cpp  RightLeg.h  RightLegBelowKnee.cpp  RightLegBelowKnee.h  Torso.cpp  Torso.h
Solar System/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  Main.cpp  Shape.cpp  Shape.h  UnitDisk.cpp  UnitDisk.h
Solar System/make/MSVS 10/: Planet Mobile.sln  Planet Mobile.vcxproj  Planet Mobile.vcxproj.filters
Solar System/make/MSVS 10/props/: MATH2D_DIR.props  OPENGLTRAINER_DIR.props
Solar System/make/MSVS 10/props/Math2D/: Math2D-Debug.props  Math2D.props
Solar System/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
Solar System/make/MSVS 90/: Planet Mobile.sln  Planet Mobile.vcproj
Solar System/make/cmake/: CMakeLists.txt
TestMatrix/: CMakeLists.txt  Main.cpp
TestMatrix/make/MSVS 10/: TestMatrix.sln  TestMatrix.vcproj  TestMatrix.vcxproj  TestMatrix.vcxproj.filters
TestMatrix/make/MSVS 10/props/: MATH2D_DIR.props
TestMatrix/make/MSVS 10/props/Math2D/: MATH2D_DIR.copyme.props  Math2D-Debug.props  Math2D-Release.props  Math2D_Lib-Debug.props  Math2D_Lib-Release.props
TestMatrix/make/MSVS 10/props/Math2D/.svn/: wc.db
TestMatrix/make/MSVS 90/: TestMatrix.sln
